css/creative.css
/* ... */
#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
  color: var(--primary);
}

#mainNav .navbar-nav .nav-item .nav-link.active {
  color: var(--primary) !important;
}

@media (min-width: 992px) {
  #mainNav {
    box-shadow: none;
    background-color: transparent;
  }
  #mainNav .navbar-brand {
    color: rgba(255, 255, 255, 0.7);
  }
  #mainNav .navbar-brand:hover {
    color: #fff;
  }
  #mainNav .navbar-nav .nav-item .nav-link {
    color: rgba(255, 255, 255, 0.7);
    padding: 0 1rem;
  }
  #mainNav .navbar-nav .nav-item .nav-link:hover {
    color: #fff;
  }
  #mainNav .navbar-nav .nav-item:last-child .nav-link {
    padding-right: 0;
  }
  #mainNav.navbar-scrolled {
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    background-color: #fff;
  }
  #mainNav.navbar-scrolled .navbar-brand {
    color: #212529;
  }
  #mainNav.navbar-scrolled .navbar-brand:hover {
    color: var(--primary);
  }
  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
    color: #212529;
  }
  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
    color: var(--primary);
  }
}

header.masthead {
  padding-top: 10rem;
  padding-bottom: calc(10rem - 72px);
  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../img/bg-masthead.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

header.masthead h1 {
  font-size: 2.25rem;
}

@media (min-width: 992px) {
  header.masthead {
    height: 100vh;
    min-height: 40rem;
    padding-top: 72px;
    padding-bottom: 0;
  }
  header.masthead p {
    font-size: 1.15rem;
  }
  header.masthead h1 {
    font-size: 3rem;
  }
}

@media (min-width: 1200px) {
  header.masthead h1 {
    font-size: 3.5rem;
  }
}

#portfolio .container-fluid {
  max-width: 1920px;
}

#portfolio .container-fluid .portfolio-box {
  position: relative;
  display: block;
}

#portfolio .container-fluid .portfolio-box .portfolio-box-caption {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 100%;
  height: 100%;
  position: absolute;
  bottom: 0;
  text-align: center;
  opacity: 0;
  color: #fff;
  /* background: rgba(244, 98, 58, 0.9); */
  transition: opacity 0.25s ease;
  text-align: center;
}

#portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category {
  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 1.2rem;
  font-weight: 600;
  text-transform: uppercase;
  text-shadow: #000 1px 0 5px;
}

#portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-name {
  font-size: 1.5rem;
  text-shadow: #000 1px 0 5px;
}

#portfolio .project-subtitle {
  font-size: 1.2rem;
  text-shadow: #000 1px 0 5px;
}
/* if user DOES have a mouse, show caption on hover */
@media (hover: hover) and (any-pointer: fine) {
  #portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption {
    background: var(--portfolio-bg);
    opacity: 1;
  }
}

/* if user doesn't have a mouse, show caption automatically */
@media (hover: none) {
  #portfolio .container-fluid .portfolio-box .portfolio-box-caption {
    background: var(--portfolio-bg);
    opacity: 1;
  }
}
@media (any-pointer: coarse) {
  #portfolio .container-fluid .portfolio-box .portfolio-box-caption {
    background: var(--portfolio-bg);
    opacity: 1;
  }
}

